# This file documents the revision history for Perl extension Catalyst.

  Bug fixes:
       - Don't mangle query parameters passed to uri_for
         - Tests for this (Byron Young + Amir Sadoughi)
       - Inherited controller methods can now be specified in
         config->{action(s)}
       - Assigning an undef response body no longer produces warnings
       - Make Catalyst.pm implement the Component::ApplicationAttribute
         interface so defining actions in MyApp.pm works again, if the
         actions have attributes that cause $self->_application to be used
         (like ActionClass).

  New features:
       - Add optional second argument to uri_with which appends to existing
         params rather than replacing them. (foo=1 becomes foo=1&foo=2 when
         uri_with({ foo => 2 }, { mode => 'append' }) is called on a foo=1
         URI.

5.80006 2009-06-29 23:37:47

  Bug fixes:
        - Revert change to URL encode things passed into $c->uri_for
          Args and CaptureArgs as this causes breakage to pre-existing
          applications.
        - Remove use of Test::MockObject as it doesn't install from CPAN
          in some environments.
        - Remove use of dclone to deep copy configs and replace with
          Catalyst::Utils::merge_hashes which has the same effect, of
          ensuring child classes don't inherit their parent's config,
          except works correctly with closures.
        - Add Class::C3::reinitialize into Catalyst::Test to avoid weird
          bugs in ctx_request (bokutin in RT#46459)
        - Fix issues with _parse_PathPrefix_attr method in Catalyst::Controller
          (jasonk in RT#42816)

  New features:
        - Use ~ as prefix for plugins or action classes which are located in
          MyApp::Plugin / MyApp::Action (mo)
        - Controller methods without attributes are now considered actions if
          they are specified in config->{action(s)} (mo)