@@ -6,6 +6,8 @@
        - Inherited controller methods can now be specified in
          config->{action(s)}
        - Assigning an undef response body no longer produces warnings
+       - Fix C3 incompatibility bug caused if you use Moose in MyApp.pm and
+         add Catalyst to the right hand side of this in @ISA.
        - Make Catalyst.pm implement the Component::ApplicationAttribute
          interface so defining actions in MyApp.pm works again, if the
          actions have attributes that cause $self->_application to be used
